--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,12 +24,11 @@
         "**/docs": true,
         "**/poetry.lock": true,
         "**/pyproject.toml": true,
-        "**/requirements.txt": true
+        "**/requirements.txt": true,
+        "**/dist/": true
     },
     "files.insertFinalNewline": true,
     "files.trimFinalNewlines": false,
-    "http.proxyAuthorization": null,
-    "http.proxyStrictSSL": true,
     "json.format.enable": true,
     "json.format.keepLines": true,
     "jupyter.exportWithOutputEnabled": true,
@@ -38,5 +37,7 @@
     "python.linting.flake8Enabled": true,
     "python.linting.mypyEnabled": true,
     "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": false
+    "python.testing.unittestEnabled": false,
+    "http.proxyAuthorization": null,
+    "http.proxyStrictSSL": true
 }
