--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: v4.4.0
     hooks:
     -   id: check-added-large-files
+        args: ['--maxkb=2000']
     -   id: check-docstring-first
     -   id: check-json
     -   id: check-merge-conflict
