--- a/pyproject.toml
+++ b/pyproject.toml
@@ -189,6 +189,9 @@ isort = "^5.12.0"
 nbqa = { extras = ["black", "flake8", "isort", "mypy"], version = "^1.6.3" }
 poethepoet = "^0.18.1"
 pre-commit = "^3.1.1"
+yapf = "^0.32.0"
+jupyter-black = "^0.3.3"
+jupyterlab-black = "^0.2.1"
 
 [tool.poetry.group.typing.dependencies]
 mypy = "^1.1.1"
